[tool.poetry]
name = "hypyxel"
version = "0.0.0"
description = "A modern API wrapper for Hypixel written in Python."
authors = ["mudkipdev <mudkip@mudkip.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
